main.css
body * {
  box-sizing: border-box;
}

/*Minimized header styles*/
header {
  background: #000;
  color: #fff;
  height: 10vh;
  padding: 20px 10px;
}

h1 {
  width: 40%;
  float: left;
}

form {
  width: 60%;
  float: left;
}

select[name="specialty"] {
  width: 40%;
}

select[name="gender"] {
  width: 18%;
}

h1, h4 {
  margin: 0;
}

h4 {
  display: none;
}

form div {
  margin: 5px auto;
}

.search input {
  width: 80%;
}

.search button {
  width: 19%;
}

/*Full screen header styles*/
.full-screen {
  height: 100vh;
  text-align: center;
  padding-top: 100px;
}

.full-screen h1 {
  width: 100%;
  float: none;
}

.full-screen h4 {
  display: block;
  margin: 20px auto;
}

.full-screen form {
  width: 100%;
  float: none;
}

.full-screen form div {
  margin: 20px auto;
  width: 50%;
}

#map {
  height: 90vh;
  width: 70%;
  float: left;
}

#results {
  height: 90vh;
  width: 30%;
  background: #ddd;
  float: left;
  overflow-y: scroll;
}

#results h3 {
  text-align: center;
}



.doc-card {
  width: 90%;
  margin: 10px auto;
  background: #fff;
  border: 1px solid #000;
  padding: 5px;
}

.doc-card img {
  float: left;
  margin-right: 10px;
}

.expanded-description {
  padding-top: 5px;
  padding-bottom: 5px;
  clear: both;
  display: none;
}

.expanded-description p {
  margin: 0;
  text-align: justify;
}

#expand {
  cursor: pointer;
  clear: both;
  margin: 0;
  text-align: center;
  font-size: 1.5em;
}

